add image to index.html
Adds image of boy swinging from vines to index.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <main>
-        <!-- Main content goes here -->
+        <div>
+            <img src="images/swinging-from-vine.png" alt="Child swinging from vine in a Brazillian Favella" loading="eager">
+        </div>
     </main>
     <script src="JS/app.js"></script>
 </body>
 </html>
+    
