add button to add image file type
adds file type input that accepts .png, .jpg, .jpeg

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <main>
-        <!-- Main content goes here -->
+
+        <label for="addImage">Add Image</label>
+        <input type="file" name="addImage" id="addImage" accept=".png, .jpg, .jpeg">
     </main>
     <script src="JS/app.js"></script>
 </body>
